# YiVideo

./: .claude  .codex  .dockerignore  .env.example  .env.subtitle.example  .factory  .gemini  .gitignore  2026-02-12-command-messageopsxexplorecommand-message.txt  777.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.base  GEMINI.md  GEMINI.zh-CN.md  IMPLEMENTATION_PLAN.md  TEST_REBUILD_GUIDE.md  analyze_rebuild_result.py  analyze_root_cause.py  analyze_subtitle_issues.py  analyze_subtitle_rebuild_issues.py  check_env.py  clean.py  config.yml  dev.md  docker-compose.yml  docker-compose.yml.bak.20251225_231418  docs  extract_subtitles.py  faster_whisper_service_common_imports_analysis.md  ffmpeg_service_nodes_analysis.md  findings.md  openspec  progress.md  requirements.txt  task_plan.md  test.py  test_rebuild_simple.sh  test_rebuild_with_semantic_protection.py  (+3 more)
.claude/: project-info.md  riper-config.json  settings.json  settings.local.json
.codex/: auth.json  config.toml
.gemini/: settings.json
.tmp.driveupload/: 1001  1005  1009  1013  1017  1023  1025  1033  1035  1039  1043  1045  1049  1051  1053  1055  1057  1061  1065  1067  1069  1071  1073  1077  1079  1083  1087  1089  1093  1095  1099  (+356 more)
services/workers/pyannote_audio_service/: CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
services/workers/pyannote_audio_service/app/: __init__.py  celery_app.py  docker_validate.py  pyannote_infer.py  tasks.py
services/workers/pyannote_audio_service/executors/: __init__.py  diarize_speakers_executor.py  get_speaker_segments_executor.py  validate_diarization_executor.py
(+897 files in other folders)
